2019-10-28  Mark Wielaard  <mark@klomp.org>

	* dwarf_sig8_hash.h: Include libdw.h. Remove COMPARE. Include
	dynamicsizehash_concurrent.h.
	* dwarf_sig8_hash.c: Include dynamicsizehash_concurrent.c.
	* dwarf_formref_die.c (dwarf_formref_die): Drop NULL argument to
	Dwarf_Sig8_Hash_find.

2019-08-26  Srđan Milaković  <sm108@rice.edu@rice.edu>

	* dwarf_abbrev_hash.{c,h}: Use the *_concurrent hash table.

2019-11-01  Jonathon Anderson  <jma14@rice.edu>

	* dwarf_begin_elf.c (valid_p): Switch calloc for malloc for fake CUs.
	Add explicit initialization of some fields.
	* dwarf_end.c (cu_free): Add clause to limit freeing of CU internals.

2019-08-26  Jonathon Anderson  <jma14@rice.edu>

	* libdw_alloc.c (__libdw_allocate): Added thread-safe stack allocator.
	* libdwP.h (Dwarf): Likewise.
	* dwarf_begin_elf.c (dwarf_begin_elf): Support for above.
	* dwarf_end.c (dwarf_end): Likewise.
	* Makefile.am: Use -pthread to provide rwlocks.

2019-07-05  Omar Sandoval  <osandov@fb.com>

	* Makefile.am (libdw_so_LIBS): Replace libebl.a with libebl_pic.a.
	Move libebl_pic.a to the beginning so that libdw symbols are resolved.
	(libdw_so_LDLIBS): Remove -ldl.
	(libdw.so): Remove -rpath.
	(libdw_a_LIBADD): Add libebl, libebl_backends, and libcpu objects.

2019-08-25  Jonathon Anderson  <jma14@rice.edu>

	* dwarf_getcfi.c (dwarf_getcfi): Set default_same_value to false.

2019-08-12  Mark Wielaard  <mark@klomp.org>

	* libdw.map (ELFUTILS_0.177): Add new version of dwelf_elf_begin.

2019-06-28  Mark Wielaard  <mark@klomp.org>

	* libdw.map (ELFUTILS_0.177): New section. Add
	dwelf_elf_e_machine_string.

2019-05-16  Mark Wielaard  <mark@klomp.org>

	* dwarf.h: Add DW_AT_GNU_numerator, DW_AT_GNU_denominator and
	DW_AT_GNU_bias.

2019-04-28  Mark Wielaard  <mark@klomp.org>

	* dwarf_siblingof.c (dwarf_siblingof): Don't initialize addr.

2019-04-28  Mark Wielaard  <mark@klomp.org>

	* dwarf_getlocation.c (dwarf_getlocation_addr): Call